--- a/index.html
+++ b/index.html
@@ -9,10 +9,271 @@
     <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
-  </head>
-  <body class="page">
-    <header class="header"></header>
-    <main></main>
-    <script src="./scripts/like.js"></script>
-  </body>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <script src="./scripts/like.js" defer></script>
+    <script src="./scripts/dialog.js" defer></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Press+Start+2P&display=swap" rel="stylesheet">
+</head>
+<body class="page">
+  <header class="header content-section">
+<div class="title-h">
+  <p class="html-tag">&lt;/HTML&gt;</p>
+  <p class="tag-description">закрывающий тег</p>
+</div>
+  </header>
+<main class="content"> 
+  <section class="card__content">
+    <h2 class="card_content__title">
+      Фритрек и нулевой спринт: Подготовка к работе
+</h2> 
+<div class="card__image-container">
+    <img class="card__image" src="images/card-1.png" alt="1 карточка">
+  <span class="card__label">&lt;/HTML&gt;</span>
+  </div>
+  <div class="text__content">
+    <p class="card__paragraph">
+      Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.
+    </p>
+    <p class="card__paragraph">
+      Место для ваших воспоминаний о начале обучения.
+    </p>
+    </div>
+  <div class="card__actions">
+      <button class="card__icon-button" type="button">
+  <svg class="like-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 27 24" width="39" height="36">
+    <g class="heart">
+      <path class="contour" d="M12 4H9V1H6V4H3V7H0V13H3V16H6V19H9V22H12V25H15V22H18V19H21V16H24V13H27V7H24V4H21V1H18V4H15V7H12V4Z"/>
+      <path class="main-body" d="M12 7H15V10H18V7H21V10H24V13H21V16H18V19H15V22H12V19H9V16H6V13H9V10H12V7Z"/>
+      <path class="core" d="M12 10H15V13H12V10Z"/>
+    </g>
+    <g class="sparks">
+      <path d="M12 0H15V3H12V0Z"/>
+      <path d="M24 9H27V12H24V9Z"/>
+      <path d="M0 9H3V12H0V9Z"/>
+      <path d="M12 21H15V24H12V21Z"/>
+    </g>
+  </svg>
+</button>
+      <button class="card__like-button" type="button">
+        <span class="button__text">Like</span>
+      </button>
+    </div>
+</section>
+<section class="card__content">
+    <h2 class="card_content__title">
+      1 спринт: Я — чистый лист
+</h2> 
+<div class="card__image-container">
+    <img class="card__image" src="images/card-2.png" alt="2 карточка">
+     <span class="card__label">&lt;/HTML&gt;</span>
+  </div>
+  <div class="text__content">
+    <p class="card__paragraph">
+      На первых этапах мы работали со страхами и сомнениями, которые часто испытывают новички. Один из них — страх перед чистым листом. Это, конечно же, намного сложнее, чем боязнь куска бумаги. Часто за этим ощущением скрываются более глубокие вопросы: с чего начать? а вдруг будет слишком сложно? что, если я не справлюсь?
+    </p>
+    <p class="card__paragraph">
+      Место для ваших воспоминаний о начале первого спринта.
+    </p>
+  <div class="card__actions">
+      <button class="card__icon-button" type="button">
+        <svg class="like-icon" width="39" height="36">
+          <use href="./svg/heart.svg"></use>
+        </svg>
+      </button>
+      <button class="card__like-button" type="button">
+        <span class="button__text">Like</span>
+      </button>
+    </div>
+  </div>
+</article>
+</section>
+<section class="card__content">
+    <h2 class="card_content__title">
+      1 спринт: А если не получится?
+</h2> 
+<div class="card__image-container">
+    <img class="card__image" src="images/card-3.png" alt="3 карточка">
+    <span class="card__label">&lt;/HTML&gt;</span>
+  </div>
+  <div class="text__content">
+    <p class="card__paragraph">
+     Первый проект — позади! Но это всё ещё самое начало пути. Радость могла быстро померкнуть и смениться ожиданием провала. Или вы, наоборот, могли вдохновиться успехами и поверить в себя.
+    </p>
+    <p class="card__paragraph">
+      Место для ваших воспоминаний об окончании первого спринта.
+    </p>
+   <div class="card__actions">
+      <button class="card__icon-button" type="button">
+        <svg class="like-icon" width="39" height="36">
+          <use href="./svg/heart.svg"></use>
+        </svg>
+      </button>
+      <button class="card__like-button" type="button">
+        <span class="button__text">Like</span>
+      </button>
+    </div>
+  </div>
+</article>
+</section>
+<section class="card__content">
+    <h2 class="card_content__title">
+      2 спринт: Погоня за идеалом
+</h2> 
+<div class="card__image-container">
+    <img class="card__image" src="images/card-4.png" alt="4 карточка">
+    <span class="card__label">&lt;/HTML&gt;</span>
+  </div>
+  <div class="text__content">
+    <p class="card__paragraph">
+     На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы понять, как много ещё впереди. Вы могли попытаться погнаться за идеалом и понять, что он недостижим. А, может, вы вовсе и не подвержены перфекционизму и вместо того, чтобы сделать идеально, старались просто сделать.
+    </p>
+    <p class="card__paragraph">
+      Место для ваших воспоминаний о начале второго спринта.
+    </p>
+    <div class="card__actions">
+      <button class="card__icon-button" type="button">
+        <svg class="like-icon" width="39" height="36">
+          <use href="./svg/heart.svg"></use>
+        </svg>
+      </button>
+      <button class="card__like-button" type="button">
+        <span class="button__text">Like</span>
+      </button>
+    </div>
+  </div>
+</article>
+</section>
+<section class="card__content">
+    <h2 class="card_content__title">
+      2 спринт: О тех, кто рядом
+</h2> 
+<div class="card__image-container">
+    <img class="card__image" src="images/card-5.png" alt="5 карточка">
+    <span class="card__label">&lt;/HTML&gt;</span>
+  </div>
+  <div class="text__content">
+    <p class="card__paragraph">
+     Всё это время вы были не одиноки (хотя, возможно, иногда и чувствовали, что одни против целого мира). Вас окружали одногруппники, команда сопровождения и просто близкие люди, которым можно пожаловаться, если очередной макет просто так не поддавался. Осваивать что-то новое легче, когда рядом есть единомышленники, не правда ли?
+    </p>
+    <p class="card__paragraph">
+      Место для ваших воспоминаний об окончании второго спринта.
+    </p>
+    <div class="card__actions">
+      <button class="card__icon-button" type="button">
+        <svg class="like-icon" width="39" height="36">
+          <use href="./svg/heart.svg"></use>
+        </svg>
+      </button>
+      <button class="card__like-button" type="button">
+        <span class="button__text">Like</span>
+      </button>
+    </div>
+  </div>
+</article>
+</section>
+<section class="card__content">
+    <h2 class="card_content__title">
+      3 спринт: Обходные стратегии
+</h2> 
+<div class="card__image-container">
+    <img class="card__image" src="images/card-6.png" alt="6 карточка">
+    <span class="card__label">&lt;/HTML&gt;</span>
+  </div>
+  <div class="text__content">
+    <p class="card__paragraph">
+     На этом курсе вы постоянно решали разные задачи. В какой-то момент вам могло показаться, что решения просто иссякли. Значит, пришло время посмотреть на задачу под другим углом.
+    </p>
+    <p class="card__paragraph">
+      Место для ваших воспоминаний о начале третьего спринта.
+    </p>
+    <div class="card__actions">
+      <button class="card__icon-button" type="button">
+        <svg class="like-icon" width="39" height="36">
+          <use href="./svg/heart.svg"></use>
+        </svg>
+      </button>
+      <button class="card__like-button" type="button">
+        <span class="button__text">Like</span>
+      </button>
+    </div>
+  </div>
+</article>
+</section>
+<section class="card__content">
+    <h2 class="card_content__title">
+      3 спринт: Когда опускаются руки
+</h2> 
+<div class="card__image-container">
+    <img class="card__image" src="images/card-7.png" alt="7 карточка">
+    <span class="card__label">&lt;/HTML&gt;</span>
+  </div>
+  <div class="text__content">
+    <p class="card__paragraph">
+     Во время учёбы часто возникает чувство, когда не знаешь, за что хвататься. Вроде и проектную пора сдавать, и задачи хочется порешать, и в теории получше разобраться, и жизнь не забыть пожить. В такие моменты очень нужна концентрация. Вспомните, откуда вы её черпали.
+    </p>
+    <p class="card__paragraph">
+     Место для ваших воспоминаний об окончании третьего спринта.
+    </p>
+     <div class="card__actions">
+      <button class="card__icon-button" type="button">
+        <svg class="like-icon" width="39" height="36">
+          <use href="./svg/heart.svg"></use>
+        </svg>
+      </button>
+      <button class="card__like-button" type="button">
+        <span class="button__text">Like</span>
+      </button>
+    </div>
+  </div>
+</article>
+</section>
+<section class="card__content">
+    <h2 class="card_content__title">
+      «Сейчас я здесь»
+</h2> 
+<div class="card__image-container">
+    <img class="card__image" src="images/card-8.png" alt="8 карточка">
+    <span class="card__label">&lt;/HTML&gt;</span>
+  </div>
+  <div class="text__content">
+    <p class="card__paragraph">
+    Сейчас вы уже очень много знаете о вёрстке. Но это только начало. Во-первых, впереди ещё много материала про «красотищу». Во-вторых, с окончанием курса учёба не заканчивается. Вёрстка — это целый мир. И этот мир постоянно меняется. Познать его полностью не получится, но это тот случай, когда важен сам процесс познания. Ведь часто путь — и есть результат.
+    </p>
+    <p class="card__paragraph">
+    Место, чтобы остановиться, подумать и написать, что вы чувствуете в этой точке пути.
+    </p>
+     <div class="card__actions">
+      <button class="card__icon-button" type="button">
+        <svg class="like-icon" width="39" height="36">
+          <use href="./svg/heart.svg"></use>
+        </svg>
+      </button>
+      <button class="card__like-button" type="button">
+        <span class="button__text">Like</span>
+      </button>
+    </div>
+  </div>
+</article>
+</section>
+<footer class="footer">
+  <button class="footer__save-button" type="button">
+    <svg class="footer__icon" width="39" height="36">
+          <use href="./svg/floppy.svg"></use>
+        </svg>
+    <span class="footer__button-text">Сохранить на память</span>
+  </button>
+</footer>
+<dialog class="save-dialog" id="saveDialog">
+  <div class="save-dialog__container">
+    <svg class="save-dialog__icon" width="39" height="36">
+      <use href="./svg/floppy.svg"></use>
+    </svg>
+    <p class="save-dialog__text">Вставьте дискету, чтобы продолжить</p>
+  </div>
+  <button class="save-dialog__button" type="button" onclick="window.saveDialog.close()">
+    <span class="button__text">OK</span>
+  </button>
+</dialog>
+</body>
 </html>
