--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           Фритрек и нулевой спринт: Подготовка к работе
         </h2>
         <div class="card__image-container">
-          <img class="card__image card__image_filter_grayscale" src="images/card-1.png" alt="1 карточка" />
+          <img class="card__image card__image_filter_none" src="images/card-1.png" alt="1 карточка" />
           <span class="card__label">&lt;/HTML&gt;</span>
         </div>
         <div class="text__content">
@@ -48,7 +48,7 @@
          <button
             type="button"
             class="card__icon-button"
-            aria-labelledby="like-button-04"
+            aria-labelledby="like-button-01"
           >
             <svg
               class="like-icon"
@@ -89,7 +89,7 @@
       <section class="card__content">
         <h2 class="card_content__title">1 спринт: Я — чистый лист</h2>
         <div class="card__image-container">
-          <img class="card__image card__image_filter_saturation" src="images/card-2.png" alt="2 карточка" />
+          <img class="card__image .card__image_filter_grayscale" src="images/card-2.png" alt="2 карточка" />
           <span class="card__label">&lt;/HTML&gt;</span>
         </div>
         <div class="text__content">
@@ -107,7 +107,7 @@
              <button
             type="button"
             class="card__icon-button"
-            aria-labelledby="like-button-04"
+            aria-labelledby="like-button-02"
           >
             <svg
               class="like-icon"
@@ -149,7 +149,7 @@
       <section class="card__content">
         <h2 class="card_content__title">1 спринт: А если не получится?</h2>
         <div class="card__image-container">
-          <img class="card__image card__image_filter_hue" src="images/card-3.png" alt="3 карточка" />
+          <img class="card__image .card__image_filter_saturate" src="images/card-3.png" alt="3 карточка" />
           <span class="card__label">&lt;/HTML&gt;</span>
         </div>
         <div class="text__content">
@@ -165,7 +165,7 @@
              <button
             type="button"
             class="card__icon-button"
-            aria-labelledby="like-button-04"
+            aria-labelledby="like-button-03"
           >
             <svg
               class="like-icon"
@@ -207,7 +207,7 @@
       <section class="card__content">
         <h2 class="card_content__title">2 спринт: Погоня за идеалом</h2>
         <div class="card__image-container">
-          <img class="card__image card__image_filter_inversion" src="images/card-4.png" alt="4 карточка" />
+          <img class="card__image .card__image_filter_hue-rotate" src="images/card-4.png" alt="4 карточка" />
           <span class="card__label">&lt;/HTML&gt;</span>
         </div>
         <div class="text__content">
@@ -267,7 +267,7 @@
       <section class="card__content">
         <h2 class="card_content__title">2 спринт: О тех, кто рядом</h2>
         <div class="card__image-container">
-          <img class="card__image card__image_filter_sepia" src="images/card-5.png" alt="5 карточка" />
+          <img class="card__image .card__image_filter_invert" src="images/card-5.png" alt="5 карточка" />
           <span class="card__label">&lt;/HTML&gt;</span>
         </div>
         <div class="text__content">
@@ -286,7 +286,7 @@
              <button
             type="button"
             class="card__icon-button"
-            aria-labelledby="like-button-04"
+            aria-labelledby="like-button-05"
           >
             <svg
               class="like-icon"
@@ -328,7 +328,7 @@
       <section class="card__content">
         <h2 class="card_content__title">3 спринт: Обходные стратегии</h2>
         <div class="card__image-container">
-          <img class="card__image card__image_filter_blur" src="images/card-6.png" alt="6 карточка" />
+          <img class="card__image .card__image_filter_sepia" src="images/card-6.png" alt="6 карточка" />
           <span class="card__label">&lt;/HTML&gt;</span>
         </div>
         <div class="text__content">
@@ -344,7 +344,7 @@
             <button
             type="button"
             class="card__icon-button"
-            aria-labelledby="like-button-04"
+            aria-labelledby="like-button-06"
           >
             <svg
               class="like-icon"
@@ -386,7 +386,7 @@
       <section class="card__content">
         <h2 class="card_content__title">3 спринт: Когда опускаются руки</h2>
         <div class="card__image-container">
-          <img class="card__image card__image_filter_custom" src="images/card-7.png" alt="7 карточка" />
+          <img class="card__image .card__image_filter_blur" src="images/card-7.png" alt="7 карточка" />
           <span class="card__label">&lt;/HTML&gt;</span>
         </div>
         <div class="text__content">
@@ -404,7 +404,7 @@
              <button
             type="button"
             class="card__icon-button"
-            aria-labelledby="like-button-04"
+            aria-labelledby="like-button-07"
           >
             <svg
               class="like-icon"
@@ -446,7 +446,7 @@
       <section class="card__content">
         <h2 class="card_content__title">«Сейчас я здесь»</h2>
         <div class="card__image-container">
-          <img class="card__image card__image_filter_grayscale" src="images/card-1.png" alt="1 карточка" />
+          <img class="card__image .card__image_filter_dark-city" src="images/card-1.png" alt="1 карточка" />
           <span class="card__label">&lt;/HTML&gt;</span>
         </div>
         <div class="text__content">
@@ -466,7 +466,7 @@
              <button
             type="button"
             class="card__icon-button"
-            aria-labelledby="like-button-04"
+            aria-labelledby="like-button-08"
           >
             <svg
               class="like-icon"
