--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <h2 class="card_content__title">1 спринт: Я — чистый лист</h2>
         <div class="card__image-container">
           <img
-            class="card__image card__image_filter_saturation"
+            class="card__image card__image_filter_saturate"
             src="images/card-2.png"
             alt="2 карточка"
           />
@@ -109,7 +109,8 @@
             будет слишком сложно? что, если я не справлюсь?
           </p>
           <p class="card__paragraph">
-            Об обучении я долго думала, собиралась с мыслями. На этом этапе во мне было много энтузиазма. Нравилось быть в этом состоянии. 
+            Об обучении я долго думала, собиралась с мыслями. На этом этапе во
+            мне было много энтузиазма. Нравилось быть в этом состоянии.
           </p>
           <div class="card__actions">
             <button
@@ -171,7 +172,9 @@
             наоборот, могли вдохновиться успехами и поверить в себя.
           </p>
           <p class="card__paragraph">
-            Было сложно. Приходилось много времени уделять учебе. Но мне было интересно. Да,были провалы, неудачи, но проект был принят. Радости не было предела!
+            Было сложно. Приходилось много времени уделять учебе. Но мне было
+            интересно. Да,были провалы, неудачи, но проект был принят. Радости
+            не было предела!
           </p>
           <div class="card__actions">
             <button
@@ -235,13 +238,14 @@
             старались просто сделать.
           </p>
           <p class="card__paragraph">
-           Мой энтузиазм по-тихоньку утих. Остался трезвый взгляд. Но я знала,к чему иду, это и придавало мне силы,чтобы не сдаться. 
+            Мой энтузиазм по-тихоньку утих. Остался трезвый взгляд. Но я знала,к
+            чему иду, это и придавало мне силы,чтобы не сдаться.
           </p>
           <div class="card__actions">
             <button
               type="button"
               class="card__icon-button"
-              aria-labelledby="like-button-04"
+              aria-label="Поставить лайк"
             >
               <svg
                 class="like-icon"
@@ -284,7 +288,7 @@
         <h2 class="card_content__title">2 спринт: О тех, кто рядом</h2>
         <div class="card__image-container">
           <img
-            class="card__image .card__image_filter_sepia"
+            class="card__image card__image_filter_sepia"
             src="images/card-5.png"
             alt="5 карточка"
           />
@@ -300,13 +304,14 @@
             правда ли?
           </p>
           <p class="card__paragraph">
-            Хорошо,когда была поддержка от моей семьи. И мысли о крутой работе в будущем, не дали мне сдаться! 
+            Хорошо,когда была поддержка от моей семьи. И мысли о крутой работе в
+            будущем, не дали мне сдаться!
           </p>
           <div class="card__actions">
             <button
               type="button"
               class="card__icon-button"
-              aria-labelledby="like-button-05"
+              aria-label="Поставить лайк"
             >
               <svg
                 class="like-icon"
@@ -349,7 +354,7 @@
         <h2 class="card_content__title">3 спринт: Обходные стратегии</h2>
         <div class="card__image-container">
           <img
-            class="card__image .card__image_filter_blur"
+            class="card__image card__image_filter_blur"
             src="images/card-6.png"
             alt="6 карточка"
           />
@@ -362,7 +367,9 @@
             время посмотреть на задачу под другим углом.
           </p>
           <p class="card__paragraph">
-            Было много мыслей,что это не мое. Но все же мысли о том,что вскоре я изменю свою жизнь, и найду работу своей мечты, держали меня на плаву.
+            Было много мыслей,что это не мое. Но все же мысли о том,что вскоре я
+            изменю свою жизнь, и найду работу своей мечты, держали меня на
+            плаву.
           </p>
           <div class="card__actions">
             <button
@@ -411,7 +418,7 @@
         <h2 class="card_content__title">3 спринт: Когда опускаются руки</h2>
         <div class="card__image-container">
           <img
-            class="card__image .card__image_filter_custom"
+            class="card__image card__image_filter_custom"
             src="images/card-7.png"
             alt="7 карточка"
           />
@@ -426,7 +433,9 @@
             черпали.
           </p>
           <p class="card__paragraph">
-            Третий спринт дался тяжело. Были бессоные ночи, и мысли,что это все не мое. Но все же, когда проект был принят, было облегчение,что я на правильном пути.  
+            Третий спринт дался тяжело. Были бессоные ночи, и мысли,что это все
+            не мое. Но все же, когда проект был принят, было облегчение,что я на
+            правильном пути.
           </p>
           <div class="card__actions">
             <button
@@ -474,11 +483,7 @@
       <section class="card__content">
         <h2 class="card_content__title">«Сейчас я здесь»</h2>
         <div class="card__image-container">
-          <img
-            class="card__image"
-            src="images/card-1.png"
-            alt="1 карточка"
-          />
+          <img class="card__image" src="images/card-1.png" alt="1 карточка" />
           <span class="card__label">&lt;/HTML&gt;</span>
         </div>
         <div class="text__content">
@@ -491,7 +496,10 @@
             и есть результат.
           </p>
           <p class="card__paragraph">
-            Мне пришлось взять перерыв в обучении. Нужно было определиться, чего я действительно хочу. И это время пошло на пользу. Я набралась сил, и приступила к работе. Горжусь собой,что все таки я нахожусь на этом этапе. 
+            Мне пришлось взять перерыв в обучении. Нужно было определиться, чего
+            я действительно хочу. И это время пошло на пользу. Я набралась сил,
+            и приступила к работе. Горжусь собой,что все таки я нахожусь на этом
+            этапе.
           </p>
           <div class="card__actions">
             <button
