Ревью (исправила ошибки)

--- a/index.html
+++ b/index.html
@@ -556,11 +556,13 @@
           </svg>
           <p class="save-dialog__text">Вставьте дискету, чтобы продолжить</p>
         </div>
-       <button class="button save-dialog__button" 
-       type="button" 
-       onclick="window.saveDialog.close()">
-      <span class="button__text">OK</span>
-      </button>
+        <button
+          class="button save-dialog__button"
+          type="button"
+          onclick="window.saveDialog.close()"
+        >
+          <span class="button__text">OK</span>
+        </button>
       </dialog>
     </main>
   </body>
