--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Закрывающий тег</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
@@ -109,6 +109,7 @@
             Об обучении я долго думала, собиралась с мыслями. На этом этапе во
             мне было много энтузиазма. Нравилось быть в этом состоянии.
           </p>
+        </div>
           <div class="card__actions">
             <button
               type="button"
@@ -150,7 +151,6 @@
               <span class="button__text">Like</span>
             </button>
           </div>
-        </div>
       </section>
       <section class="card__content">
         <h2 class="card_content__title">1 спринт: А если не получится?</h2>
@@ -173,6 +173,7 @@
             интересно. Да,были провалы, неудачи, но проект был принят. Радости
             не было предела!
           </p>
+        </div>
           <div class="card__actions">
             <button
               type="button"
@@ -213,7 +214,6 @@
             <button class="button card__like-button" type="button">
               <span class="button__text">Like</span>
             </button>
-          </div>
         </div>
       </section>
       <section class="card__content">
@@ -238,6 +238,7 @@
             Мой энтузиазм по-тихоньку утих. Остался трезвый взгляд. Но я знала,к
             чему иду, это и придавало мне силы,чтобы не сдаться.
           </p>
+        </div>
           <div class="card__actions">
             <button
               type="button"
@@ -278,7 +279,6 @@
             <button class="button card__like-button" type="button">
               <span class="button__text">Like</span>
             </button>
-          </div>
         </div>
       </section>
       <section class="card__content">
@@ -304,6 +304,7 @@
             Хорошо,когда была поддержка от моей семьи. И мысли о крутой работе в
             будущем, не дали мне сдаться!
           </p>
+        </div>
           <div class="card__actions">
             <button
               type="button"
@@ -344,7 +345,6 @@
             <button class="button card__like-button" type="button">
               <span class="button__text">Like</span>
             </button>
-          </div>
         </div>
       </section>
       <section class="card__content">
@@ -368,6 +368,7 @@
             изменю свою жизнь, и найду работу своей мечты, держали меня на
             плаву.
           </p>
+        </div>
           <div class="card__actions">
             <button
               type="button"
@@ -408,7 +409,6 @@
             <button class="button card__like-button" type="button">
               <span class="button__text">Like</span>
             </button>
-          </div>
         </div>
       </section>
       <section class="card__content">
@@ -434,6 +434,7 @@
             не мое. Но все же, когда проект был принят, было облегчение,что я на
             правильном пути.
           </p>
+        </div>
           <div class="card__actions">
             <button
               type="button"
@@ -474,7 +475,6 @@
             <button class="button card__like-button" type="button">
               <span class="button__text">Like</span>
             </button>
-          </div>
         </div>
       </section>
       <section class="card__content">
@@ -498,6 +498,7 @@
             и приступила к работе. Горжусь собой,что все таки я нахожусь на этом
             этапе.
           </p>
+        </div>
           <div class="card__actions">
             <button
               type="button"
@@ -538,12 +539,11 @@
             <button class="button card__like-button" type="button">
               <span class="button__text">Like</span>
             </button>
-          </div>
         </div>
       </section>
       <section class="content__save-button">
         <button class="button save-button" type="button">
-          <svg class="content__icon" width="39" height="36">
+          <svg class="content__icon" width="28" height="28">
             <use href="./svg/floppy.svg"></use>
           </svg>
           <span class="button__text">Сохранить на память</span>
@@ -551,7 +551,7 @@
       </section>
       <dialog class="save-dialog" id="saveDialog">
         <div class="save-dialog__container">
-          <svg class="save-dialog__icon" width="39" height="36">
+          <svg class="save-dialog__icon" width="28" height="28">
             <use href="./svg/floppy.svg"></use>
           </svg>
           <p class="save-dialog__text">Вставьте дискету, чтобы продолжить</p>
