--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Закрывающий тег</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
-    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./svg/favicon.svg" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -57,9 +57,9 @@
           >
             <svg
               class="like-icon"
-              width="39"
-              height="36"
-              viewBox="0 0 39 36"
+              width="38"
+              height="38"
+              viewBox="0 0 38 38"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
               aria-hidden="true"
@@ -122,9 +122,9 @@
           >
             <svg
               class="like-icon"
-              width="39"
+              width="38"
               height="36"
-              viewBox="0 0 39 36"
+              viewBox="0 0 38 38"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
               aria-hidden="true"
@@ -186,9 +186,9 @@
           >
             <svg
               class="like-icon"
-              width="39"
-              height="36"
-              viewBox="0 0 39 36"
+              width="38"
+              height="38"
+              viewBox="0 0 38 38"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
               aria-hidden="true"
@@ -251,9 +251,9 @@
           >
             <svg
               class="like-icon"
-              width="39"
+              width="38"
               height="36"
-              viewBox="0 0 39 36"
+              viewBox="0 0 38 38"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
               aria-hidden="true"
@@ -317,9 +317,9 @@
           >
             <svg
               class="like-icon"
-              width="39"
-              height="36"
-              viewBox="0 0 39 36"
+              width="38"
+              height="38"
+              viewBox="0 0 38 38"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
               aria-hidden="true"
@@ -381,9 +381,9 @@
           >
             <svg
               class="like-icon"
-              width="39"
-              height="36"
-              viewBox="0 0 39 36"
+              width="38"
+              height="38"
+              viewBox="0 0 38 38"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
               aria-hidden="true"
@@ -447,9 +447,9 @@
           >
             <svg
               class="like-icon"
-              width="39"
-              height="36"
-              viewBox="0 0 39 36"
+              width="38"
+              height="38"
+              viewBox="0 0 38 38"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
               aria-hidden="true"
@@ -511,9 +511,9 @@
           >
             <svg
               class="like-icon"
-              width="39"
-              height="36"
-              viewBox="0 0 39 36"
+              width="38"
+              height="38"
+              viewBox="0 0 38 38"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
               aria-hidden="true"
